map fix, spacing, alignment.
next is contact link and email fix

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ input[type="text"]:focus {
   border: 1px solid #555;
 }
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 320px) {
   section {
     padding: 0 10%;
   }
@@ -196,7 +196,7 @@ input[type="text"]:focus {
   }
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 320px) {
   header {
     display: flex;
     justify-content: space-between;
